codegen function (tentative) (#1)
* tentative

* use astknife

* adding Gen struct

* wip emit

* config struct

* hmm

* adjustment

* accessor sub package

* support dumping correct files

* examples

--- a/examples/todo.txt
+++ b/examples/todo.txt
@@ -8,3 +8,9 @@
   - id
 - constant(enum)
 - skip unexported symbol
+
+hmm
+----------------------------------------
+
+- iterate struct
+- split type name
